--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,96 @@
-.App {
+body {
+  font-family: Arial, Helvetica, sans-serif
+}
+
+.main {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-position: center;
+  background-size: cover;
+}
+
+.weather {
+  width: 30%;
+  height: 350px;
+  background: rgba(255, 255, 255, 0.6);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.heading {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.search {
+  width: 100%;
+  text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input {
+  width: 60%;
+  height: 30px;
+  border-radius: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button {
+  margin-left: 5%;
+  height: 33px;
+  width: 20%;
+  background-color: #13140f;
   color: white;
+  border-radius: 5px;
+  border-color: #13140f;
 }
 
-.App-link {
-  color: #61dafb;
+.temp {
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.humid {
+  margin-top: 10%;
+}
+
+.wind {
+  margin-top: 2%;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+/* Media queries for Responsiveness */
+
+/* Responsiveness on screen size 992 to 1200px */
+@media (min-width:992px) and (max-width:1199px){
+  .weather {
+      width: 40%;
   }
 }
+
+/* Responsiveness on screen size 768 to 991px */
+@media (min-width:768px) and (max-width:991px){
+  .weather {
+      width: 50%;
+  }
+}
+
+/* Responsiveness on screen size 576 to 767px */
+@media (min-width:576px) and (max-width:767px){
+  .weather {
+      width: 60%;
+  }
+}
+
+/* Responsiveness on screen size 360 to 575px */
+@media (min-width:360px) and (max-width:575px){
+  .weather {
+      width: 80%;
+  }
+}
+
